--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!--------------------------------Header -------------------------------------------->
   <header>
     <div class="top-nav" id="top-nav_1">
-        <a href="/Resto"> <div class=" top-nav__logo"> </div>  </a>
+        <a href="#"> <div class=" top-nav__logo"> </div>  </a>
         <a href="#gallery" id="link-gallery" class="top-nav__link"> Gallery </a>
         <a  href="#about" class="top-nav__link" id="linkabout"> About  </a>
         <a   href="#delivery" class="top-nav__link" id="link-delivary" > Delivery </a>
@@ -35,7 +35,7 @@
             <a href="#Dessert" class="dropdown__item"> <p> Dessert </p> </a>
           </div>
         </div>
-        <a  href="/Resto" class="top-nav__link" id="link-home"> Home  </a>
+        <a  href="#" class="top-nav__link" id="link-home"> Home  </a>
       <!--  <a class="top-nav__link top-nav__hidden"> Hide </a> -->
         <div class="top-nav__icon">
           <div class="top-nav__icon__middle"> </div>
